welcome.lessons.welcome.array.search.IndexOfValue.scala.error
indexOfValue:6: error: type mismatch;
 found   : Boolean
 required: Int
  return result
         ^