welcome.lessons.welcome.array.search.IndexOfValue.scala.code
def indexOfValue(nums:Array[Int] ,lookingFor:Int): Int = {
  var result = false
  for (i <- nums) {
    if (lookingFor==i) result=true
  }
  return result
}